[package]
name = "noserc"
version = "0.1.0"
authors = ["Erlend Tobiassen <erlentob@stud.ntnu.no>"]
edition = "2018"

[lib]
name = "noserc"
path = "src/noserc.rs"
proc-macro = true

[dependencies]
syn = "0.15.0"
heck = "0.3"
quote = "0.6"
proc-macro2 = "0.4"
freyr = { path = "../freyr" }

[dev-dependencies]
noser = { path = "../noser" }